    Apache REMOTE_USER authentication handled by the WebLogin front-end
    (such as when using Negotiate-Auth with mod_auth_kerb).  Previously,
    there was only a @REMUSER_REALMS setting, which combined both
    meanings.  @REMUSER_REALMS continues to be supported for backward
    compatibility, but will only be used if the more-specific variable is
    not set.  Patch from Tom Jones.

    Document the WebAuthRequireSSL configuration directive.  Under normal
    circumstances, this directive should always be left on (the default)
    to avoid serious security vulnerabilities, but there are some specific
    situations where it may be necessary to turn it off.

    Add webauth_token_encrypt and webauth_token_decrypt to the public API,
    including the Perl API.  These functions provide access to the
    low-level token encryption and decryption routines.  Normally, the
    high-level webauth_token_{encode,decode} functions will be used
    instead, but these functions are useful for constructing low-level
    tests.

    The webauth_base64_* functions have been removed from libwebauth, as
    have the corresponding Perl bindings.  For C programs, use the
    apr_base64_* functions from APR-Util instead.  For Perl programs, use
    MIME::Base64.

    The webauth_attr_*, webauth_attrs_*, and webauth_hex_* functions have
    been removed from libwebauth, as have the corresponding Perl bindings.
    These functions provided a low-level interface to internal WebAuth
    data structures that is no longer necessary.

    Remove webauth.h.  The only remaining contents of interest to clients
    were the WebAuth protocol error constants, which have now moved to
    webauth/tokens.h.

    Add public webauth_keyring_encode and webauth_keyring_decode functions
    that encode and decode keyrings into the serialization format used for
    storing them in files.  These are useful for sending WebAuth keyrings